--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Version 0.25 - March 2025
+
+# Programming languages support:
+  * Go:
+    - xgettext now supports Go.
+    - 'msgfmt -c' now verifies the syntax of translations of Go format
+      strings.
+
 Version 0.24 - February 2025
 
 # Programming languages support:
