--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Version 0.25 - March 2025
     - xgettext now supports Go.
     - 'msgfmt -c' now verifies the syntax of translations of Go format
       strings.
+    - A new example 'hello-go' has been added.
 
 Version 0.24 - February 2025
 
