--- a/gettext-tools/examples/README
+++ b/gettext-tools/examples/README
@@ -30,6 +30,7 @@ environment.
     hello-clisp                Lisp
     hello-librep               librep
     hello-rust                 Rust
+    hello-go                   Go
     hello-ruby                 Ruby
     hello-sh                   Shell
     hello-gawk                 awk
@@ -75,6 +76,7 @@ Makefile types:
     hello-clisp                .gmo                    Makefile.am
     hello-librep               .gmo                    Makefile.am
     hello-rust                 .gmo                    Makefile.am
+    hello-go                   .gmo                    Makefile.am
     hello-ruby                 .gmo                    Makefile.am
     hello-sh                   .gmo                    Makefile.am
     hello-gawk                 .gmo                    Makefile.am
