examples: Add hello-go-http example.
* gettext-tools/examples/hello-go-http/INSTALL: New file.
* gettext-tools/examples/hello-go-http/autogen.sh: New file.
* gettext-tools/examples/hello-go-http/autoclean.sh: New file.
* gettext-tools/examples/hello-go-http/example1/hello1ml.go.in: New file.
* gettext-tools/examples/hello-go-http/example1/go.mod.in: New file.
* gettext-tools/examples/hello-go-http/example1/Makefile.am: New file.
* gettext-tools/examples/hello-go-http/Makefile.am: New file.
* gettext-tools/examples/hello-go-http/configure.ac: New file.
* gettext-tools/examples/hello-go-http/m4/Makefile.am: New file.
* gettext-tools/examples/hello-go-http/po/LINGUAS: New file.
* gettext-tools/examples/hello-go-http/po/Makefile.am: New file.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Add
hello-go-http.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS): Update for
hello-go-http.
(hello-go-http.pot): New target.
(SMALLPOFILES_FOR_lang): Update for hello-go-http.
($(srcdir)/../hello-go-http/po/$(LL).po): New rule.
* gettext-tools/examples/check-examples (func_check_autoclean_all,
func_check_distclean_all, func_check_maintainerclean_all,
func_check_maintainerclean_vpath_all, func_check_dist_all,
func_check_dist_vpath_all, func_check_install_all, func_check_uninstall_all,
func_check_distcheck_all, func_check_all): Handle hello-go-http as well.
* gettext-tools/examples/README: Mention hello-go-http.
* gettext-tools/doc/lang-go.texi: Likewise.
* NEWS: Likewise.

--- a/gettext-tools/doc/lang-go.texi
+++ b/gettext-tools/doc/lang-go.texi
@@ -250,4 +250,5 @@ fully portable
 ---
 @end table
 
-An example is available in the @file{examples} directory: @code{hello-go}.
+Two examples are available in the @file{examples} directory:
+@code{hello-go} and @code{hello-go-http}.
