D support: Add the runtime library.
* gnulib-local/m4/d.m4: New file.
* gnulib-local/modules/d: New file.
* gnulib-local/Makefile.am (EXTRA_DIST): Add d.m4 and the 'd' module.
* autogen.sh (GNULIB_MODULES_RUNTIME_OTHER): Add d, dcomp-script.
* gettext-runtime/intl-d/Makefile.am: New file.
* gettext-runtime/intl-d/gnu/libintl/package.d: New file.
* gettext-runtime/intl-d/gnu/libintl/libintl.d: New file.
* gettext-runtime/intl-d/gnu/libintl/internal/low.d: New file.
* gettext-runtime/configure.ac: Invoke gt_D_CHOICE, gt_DCOMP. Set the variable
BUILDD and the Automake conditional BUILD_D.
* gettext-runtime/Makefile.am (SUBDIRS): Add intl-d.
* NEWS: Mention libintl_d.a.
* gettext-runtime/NEWS: Likewise.
* PACKAGING: Add the sources and binary for the libintl_d library.
* DEPENDENCIES: Mention the D compiler and runtime.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 0.25 - March 2025
+Version 0.25 - April 2025
 
 # Programming languages support:
   * Go:
@@ -9,6 +9,9 @@ Version 0.25 - March 2025
   * TypeScript:
     - xgettext now supports TypeScript and TSX (= TypeScript with JSX
       extensions).
+  * D:
+    - A new library libintl_d.a contains the runtime for using GNU gettext
+      message catalogs in the D programming language.
 
 Version 0.24 - February 2025
 
