--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.24.1 - April 2025
+
+* Bug fixes:
+  - Fix bad interactions between autoreconf and autopoint.
+
 Version 0.24 - February 2025
 
 # Programming languages support:
