examples: Add hello-d example.
* gettext-tools/examples/hello-d/INSTALL: New file.
* gettext-tools/examples/hello-d/autogen.sh: New file.
* gettext-tools/examples/hello-d/autoclean.sh: New file.
* gettext-tools/examples/hello-d/hello.d.in: New file.
* gettext-tools/examples/hello-d/Makefile.am: New file.
* gettext-tools/examples/hello-d/configure.ac: New file.
* gettext-tools/examples/hello-d/m4/Makefile.am: New file.
* gettext-tools/examples/hello-d/po/LINGUAS: New file.
* gettext-tools/examples/hello-d/po/Makefile.am: New file.
* gettext-tools/examples/installpaths.in: Define also includedir.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Add hello-d.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS): Update for hello-d.
(hello-d.pot): New target.
(SMALLPOFILES_FOR_lang): Update for hello-d.
($(srcdir)/../hello-d/po/$(LL).po): New rule.
* gettext-tools/examples/check-examples (func_check_autoclean_all,
func_check_distclean_all, func_check_maintainerclean_all,
func_check_maintainerclean_vpath_all, func_check_dist_all,
func_check_dist_vpath_all, func_check_install_all, func_check_uninstall_all,
func_check_distcheck_all, func_check_all): Handle hello-d as well.
* gettext-tools/examples/README: Mention hello-d.
* gettext-tools/doc/lang-d.texi: Likewise.
* NEWS: Likewise.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ Version 0.25 - April 2025
     - xgettext now supports D.
     - 'msgfmt -c' now verifies the syntax of translations of D format
       strings.
+    - A new example 'hello-d' has been added.
 
 Version 0.24 - February 2025
 
