--- a/gettext-tools/examples/README
+++ b/gettext-tools/examples/README
@@ -36,6 +36,7 @@ environment.
     hello-sh                   Shell
     hello-gawk                 awk
     hello-pascal               Pascal
+    hello-d                    D
     hello-smalltalk            Smalltalk
     hello-tcl                  Tcl
     hello-tcl-tk               Tcl               Tk
@@ -83,6 +84,7 @@ Makefile types:
     hello-sh                   .gmo                    Makefile.am
     hello-gawk                 .gmo                    Makefile.am
     hello-pascal               .gmo                    Makefile.am
+    hello-d                    .gmo                    Makefile.am
     hello-smalltalk            .gmo                    Makefile.am
     hello-perl                 .gmo                    Makefile.am
     hello-php                  .gmo                    Makefile.am
