--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,9 @@ Version 0.25 - April 2025
     - 'msgfmt -c' now verifies the syntax of translations of D format
       strings.
     - A new example 'hello-d' has been added.
+  * Modula-2:
+    - A new library libintl_m2.so contains the runtime for using GNU gettext
+      message catalogs in the Modula-2 programming language.
 
 Version 0.24.1 - April 2025
 
