--- a/gettext-tools/doc/xgettext.texi
+++ b/gettext-tools/doc/xgettext.texi
@@ -90,6 +90,7 @@ Specifies the language of the input files.  The supported languages are
 @code{Shell},
 @code{awk},
 @code{Lua},
+@code{Modula-2},
 @code{D},
 @code{Smalltalk},
 @code{Vala},
@@ -263,6 +264,7 @@ Go,
 Shell,
 awk,
 Lua,
+Modula-2,
 D,
 Vala,
 Tcl,
@@ -327,6 +329,7 @@ Go,
 Shell,
 awk,
 Lua,
+Modula-2,
 D,
 Vala,
 Tcl,
@@ -491,6 +494,7 @@ Go,
 Shell,
 awk,
 Lua,
+Modula-2,
 D,
 Vala,
 Tcl,
