--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ Version 0.25 - April 2025
     - xgettext now supports Modula-2.
     - 'msgfmt -c' now verifies the syntax of translations of Modula-2 format
       strings.
+    - A new example 'hello-modula2' has been added.
 
 Version 0.24.1 - April 2025
 
