--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 0.25 - April 2025
+Version 0.25 - May 2025
 
 # Programming languages support:
   * Go:
@@ -24,10 +24,12 @@ Version 0.25 - April 2025
       strings.
     - A new example 'hello-modula2' has been added.
 
-Version 0.24.1 - April 2025
+Version 0.24.1 - May 2025
 
 * Bug fixes:
   - Fix bad interactions between autoreconf and autopoint.
+  - xgettext: Creating the POT file of a package under Git version control
+    is now faster.
 
 Version 0.24 - February 2025
 
