--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,9 @@
-Version 0.24.1 - April 2025
+Version 0.24.1 - May 2025
 
 * Bug fixes:
   - Fix bad interactions between autoreconf and autopoint.
+  - xgettext: Creating the POT file of a package under Git version control
+    is now faster.
 
 Version 0.24 - February 2025
 
