xgettext: Add an option to opt-out of the use of git for the POT-Creation-Date.
Reported by Serhii Tereshchenko at <https://savannah.gnu.org/bugs/?66865>.

* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add stat-time.
* gettext-tools/src/xgettext.c: Include stat-time.h.
(xgettext_no_git): New variable.
(long_options): Add option '--no-git'.
(main): Handle the option --no-git.
(usage): Document the option --no-git.
(struct accumulator): New type, copied from gnulib/lib/vc-mtime.c.
(accumulate): New function, copied from gnulib/lib/vc-mtime.c.
(max_mtime_without_git): New function, based on gnulib/lib/vc-mtime.c.
(finalize_header): Conditionally invoke max_mtime_without_git instead of
max_vc_mtime.
* gettext-tools/doc/xgettext.texi: Document the option --no-git.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -29,7 +29,8 @@ Version 0.24.1 - May 2025
 * Bug fixes:
   - Fix bad interactions between autoreconf and autopoint.
   - xgettext: Creating the POT file of a package under Git version control
-    is now faster.
+    is now faster. Also, the use of Git can be turned off by specifying
+    the option '--no-git'.
 
 Version 0.24 - February 2025
 
