xgettext: Allow ignoring specific files in the POT-Creation-Date computation.
Reported by Vaclav Slavik <vaclav@slavik.io>
at <https://savannah.gnu.org/users/vslavik>.

* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add hashkey-string, set.
* gettext-tools/src/xgettext.c: Include gl_set.h, gl_xset.h, gl_hash_set.h,
hashkey-string.h.
(generated_files): New variables.
(long_options): New option '--generated'.
(main): Initialize generated_files. Handle the option '--generated'.
(usage): Document the option '--generated'.
(finalize_header): Filter out the generated_files from the file list.
* gettext-tools/doc/xgettext.texi: Document the option '--generated'.
* gettext-tools/tests/xgettext-git-1: Test the --generated option.
* NEWS: Mention the new option.

--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,10 @@ Version 0.25 - May 2025
       strings.
     - A new example 'hello-modula2' has been added.
 
+# Improvements for maintainers:
+  * xgettext has a new option '--generated' that customizes the way the
+    'POT-Creation-Date' in the POT file is computed.
+
 Version 0.24.1 - May 2025
 
 * Bug fixes:
