--- a/gettext-runtime/doc/matrix.texi
+++ b/gettext-runtime/doc/matrix.texi
@@ -8,8 +8,8 @@ aspell             |             []  []             []         [] [] |
 bash               |                    []          []         []    |
 beebase            |                                                 |
 bfd                |                                                 |
-binutils           |                                                 |
-bison              |                    []                           |
+binutils           |                                []               |
+bison              |                    []          []               |
 bison-runtime      |             []     []          []            [] |
 buzztrax           |                                           [] [] |
 ccd2cue            |                                              [] |
@@ -155,13 +155,13 @@ xz                 |                                []               |
 xz-man             |                                                 |
                    +-------------------------------------------------+
                      ab af an ar ast be bg bn bn_IN ca ckb crh cs da
-                      1  3  2  6 15  14 31  1   1   50  1   1  62 95
+                      1  3  2  6 15  14 31  1   1   52  1   1  62 95
 @end group
 
 @group
                      de  el en en_GB eo es  et eu fa fi fr  fur ga gd
                    +--------------------------------------------------+
-a2ps               | []  []             []              []            |
+a2ps               | []  []             []  []          []            |
 anubis             | []                 []           [] []            |
 aspell             | []         []   [] []           [] []  []  []    |
 bash               | []              [] []              []      []    |
@@ -179,7 +179,7 @@ clisp              | []     []          []              []            |
 coreutils          | []                 []  []          []            |
 cpio               | []                 []           [] []      []    |
 cppi               | []              [] []           [] []            |
-cpplib             |                                                  |
+cpplib             | []                                 []            |
 cryptsetup         | []                 []              []            |
 datamash           | []              [] []              []            |
 denemo             |                                                  |
@@ -210,7 +210,7 @@ gettext-runtime    | []              [] []           [] []      []    |
 gettext-tools      | []                 []           [] []            |
 gnubik             | []              [] []           [] []  []        |
 gnuchess           | []              [] []              []            |
-gnucobol           |                                    []            |
+gnucobol           | []                                 []            |
 gnulib             | []              [] []           [] []            |
 gnunet             |                    []                            |
 gnunet-gtk         | []                 []                            |
@@ -314,7 +314,7 @@ xz                 | []              [] []           []               |
 xz-man             | []                                 []            |
                    +--------------------------------------------------+
                      de  el en en_GB eo es  et eu fa fi fr  fur ga gd
-                     129 23  1   5   81 121 18  8  5 74 141 25  26  2
+                     131 23  1   5   81 121 19  8  5 74 142 25  26  2
 @end group
 
 @group
@@ -323,7 +323,7 @@ xz-man             | []                                 []            |
 a2ps               |             [] []             []          []    |
 anubis             |             [] []    []    []                   |
 aspell             |             [] []    []    [] []                |
-bash               |             [] []    []       []          []    |
+bash               |             [] []                         []    |
 beebase            |                            ()                   |
 bfd                |                                                 |
 binutils           |                                                 |
@@ -379,7 +379,7 @@ gphoto2            |                []    []    [] [] []       []    |
 gprof              |                []    []    []    []             |
 grep               | []          [] []    []    [] [] []       []    |
 grip               |                []          [] []          []    |
-grub               | []    []    [] []          []    []       []    |
+grub               | []    []    [] []    []    []    []       []    |
 gsasl              |                []    []    []    []             |
 gss                |             [] []    []    []    []             |
 gst-plugins-bad    |             [] []    []    []    []             |
@@ -394,7 +394,7 @@ gutenprint         | []          [] []          []    []             |
 hello              |             []                   []             |
 help2man           |             []             [] []          []    |
 help2man-texi      |                                                 |
-i18nparse          |                                                 |
+i18nparse          |                                  []             |
 idutils            |                []    []          []             |
 kbd                |                      []                         |
 klavaro            | []          [] []    []    []       []          |
@@ -410,11 +410,11 @@ libidn2            |                []    []          []       []    |
 lilypond           |                            [] []                |
 lordsawar          |                               []                |
 lynx               |                []    []    [] []                |
-m4                 |                                  []       []    |
+m4                 |                                           []    |
 mailfromd          |                                                 |
 mailutils          |                                                 |
 make               |             []       []    [] []          []    |
-man-db             |                      []       []          []    |
+man-db             |                      []    [] []          []    |
 man-db-manpages    |                      []                   []    |
 meritous           |                                                 |
 midi-instruments   | []    []    [] [] [] [] [] [] [] []       [] [] |
@@ -469,11 +469,11 @@ wyslij-po          | []          [] []    []                         |
 xboard             |                                                 |
 xdg-user-dirs      | [] [] [] [] [] []    [] [] [] [] [] [] [] [] [] |
 xkeyboard-config   | []    []    [] []    []    []    []       []    |
-xz                 |             [] []                []       []    |
+xz                 |             [] []          []    []       []    |
 xz-man             |                            []             []    |
                    +-------------------------------------------------+
                      gl gu he hi hr hu hy id is it ja ka kk kn ko ku
-                     30  1 10  1 58 62  2 59  7 63 46 44  2  1 45  3
+                     30  1 10  1 58 62  2 59  7 65 45 44  2  1 45  3
 @end group
 
 @group
@@ -642,8 +642,8 @@ a2ps               | []          []  []             []  []           |
 anubis             | [] []       []  []             []  []           |
 aspell             | [] []  []   []  []    [] [] [] []  []           |
 bash               | [] []  []   []                 []  []           |
-beebase            |             []                 []               |
-bfd                |    []       []  []             []               |
+beebase            |             []                 []  []           |
+bfd                |    []       []  []             []  []           |
 binutils           |    []       []  []             []  []           |
 bison              | [] []  []                      []  []           |
 bison-runtime      | [] []  []   []  []       [] [] []  []     []    |
@@ -656,7 +656,7 @@ clisp              |                 []             []  []           |
 coreutils          | [] []  []   []  []       []    []  []           |
 cpio               | [] []  []   []  []             []  []           |
 cppi               | []     []   []                 []  []           |
-cpplib             |             []                                  |
+cpplib             |             []                     []           |
 cryptsetup         | []          []  []             []  []           |
 datamash           |        []   []                 []  []           |
 denemo             |                                                 |
@@ -685,7 +685,7 @@ gdbm               | []     []   []  []             []  []           |
 gettext-examples   | [] []  []   []  []    [] [] [] []  []     []    |
 gettext-runtime    | [] []  []   []  []    [] []    []  []           |
 gettext-tools      | [] []  []   []  []    [] []    []  []           |
-gnubik             | []     []   []           []    []  []           |
+gnubik             | [] []  []   []           []    []  []           |
 gnuchess           |        []   []                 []  []           |
 gnucobol           |                                []               |
 gnulib             | [] []  []   []  []             []  []           |
@@ -706,10 +706,10 @@ gst-plugins-good   | []     []   []  []    [] []    []  []           |
 gst-plugins-ugly   | []     []   []  []    [] [] [] []  []     []    |
 gstreamer          | []     []   []  []    [] []    []  []           |
 gtick              | []     []   []  []    []       []  []           |
-gtkam              | []     []   []  []    []       []  []           |
+gtkam              | [] []  []   []  []    []       []  []           |
 gtkspell           | [] []  []   []  []    [] [] [] []  []     []    |
 gutenprint         |             []  []    [] []        []           |
-hello              | []     []   []  []    []       []  []     []    |
+hello              | [] []  []   []  []    []       []  []     []    |
 help2man           | []     []   []  []             []  []           |
 help2man-texi      | []     []   []                 []  []           |
 i18nparse          |        []   []           []        []           |
@@ -728,7 +728,7 @@ libidn2            | []     []   []  []             []  []           |
 lilypond           |             []                     []           |
 lordsawar          |                 []                 []           |
 lynx               |        []   []  []                 []           |
-m4                 |        []   []                 []  []           |
+m4                 | []     []   []                 []  []           |
 mailfromd          | []     []   []                 []               |
 mailutils          | []     []   []                 []               |
 make               | [] []  []   []  []             []  []           |
@@ -741,7 +741,7 @@ mpop               |        []   []  []             []  []           |
 msmtp              |        []   []  []             []  []           |
 nano               | [] []  []   []  []    []    [] []  []           |
 opcodes            |        []   []                 []  []           |
-parted             | []     []   []  []    [] []    []  []           |
+parted             | [] []  []   []  []    [] []    []  []           |
 pies               | []     []   []                 []               |
 procps-ng          | []     []   []                     []           |
 procps-ng-man      |             []                     []           |
@@ -761,21 +761,21 @@ shepherd           |             []        []       []  []           |
 shishi             | []          []                 []  []           |
 skribilo           |        []   []                 []  []           |
 solfege            | []     []   []  []    []           []           |
-solfege-manual     | []     []   []                                  |
+solfege-manual     | []     []   []                     []           |
 sudo               | [] []  []   []  []             []  []           |
 sudoers            | [] []  []   []  []             []  []           |
 sysstat            |    []  []   []  []             []  []           |
 tar                | [] []  []   []  []       []    []  []           |
 texinfo            | [] []  []   []  []    []       []  []           |
-texinfo_document   | []     []   []        []       []  []           |
+texinfo_document   | [] []  []   []        []       []  []           |
 tigervnc           |             []  []    []       []  []           |
 tin                |                 []                              |
 tin-man            |                                                 |
 trader             |        []   []  []             []  []           |
 util-linux         | [] []  []   []                 []  []           |
-util-linux-man     |             []                 []               |
+util-linux-man     | []          []                 []               |
 vmm                |             []                 []               |
-vorbis-tools       | []          []           []    []  []           |
+vorbis-tools       | []     []   []           []    []  []           |
 wastesedge         |        []                          []           |
 wcd                |        []   []                 []  []           |
 wcd-man            |        []   []                 []  []           |
@@ -787,24 +787,24 @@ wyslij-po          | []     []   []                 []  []           |
 xboard             | []          []  []             []  []           |
 xdg-user-dirs      | [] []  []   []  []    [] [] [] []  []     [] [] |
 xkeyboard-config   | [] []  []   []  []       [] [] []  []           |
-xz                 | []     []   []                 []  []           |
+xz                 | [] []  []   []                 []  []           |
 xz-man             |        []   []                 []               |
                    +-------------------------------------------------+
                      pl pt pt_BR ro  ru rw sk sl sq sr  sv  sw ta te
-                     97 43  112  135 85  0 37 32 11 130 127  1  8  1
+                     99 49  113  135 85  0 37 32 11 130 131  1  8  1
 @end group
 
 @group
                      tg th tr uk  ur vi wa wo zh_CN zh_HK zh_TW
                    +--------------------------------------------+
-a2ps               |    []    []                                | 19
+a2ps               |    []    []                                | 20
 anubis             |       [] []     []                         | 21
 aspell             |          []     [] []     []               | 34
-bash               |       [] []     []        []          []   | 26
-beebase            |          []                                |  7
-bfd                |          []                                |  7
-binutils           |          []                                |  7
-bison              |          []                           []   | 17
+bash               |          []     []        []          []   | 23
+beebase            |          []                                |  8
+bfd                |          []                                |  8
+binutils           |          []                                |  8
+bison              |          []                           []   | 18
 bison-runtime      |    [] [] []     []        []          []   | 41
 buzztrax           |                 []        []               | 12
 ccd2cue            |    []    []     []        []               | 14
@@ -815,7 +815,7 @@ clisp              |                                            | 13
 coreutils          |       [] []     []        []          []   | 27
 cpio               |       [] []     []        []               | 25
 cppi               |          []     []        []               | 20
-cpplib             |          []               []               |  3
+cpplib             |          []               []               |  6
 cryptsetup         |          []               []               | 13
 datamash           |          []                                | 12
 denemo             |                           []    []    []   |  7
@@ -844,9 +844,9 @@ gdbm               |          []     []                         | 13
 gettext-examples   |       [] []     []        []    []    []   | 44
 gettext-runtime    |       [] []     []        []          []   | 34
 gettext-tools      |       [] []     []        []          []   | 26
-gnubik             |          []     []        []               | 23
+gnubik             |          []     []        []               | 24
 gnuchess           |          []     []        []               | 15
-gnucobol           |                                            |  2
+gnucobol           |                                            |  3
 gnulib             |          []               []          []   | 19
 gnunet             |                                            |  2
 gnunet-gtk         |                                            |  3
@@ -856,7 +856,7 @@ gphoto2            |          []     []        []          []   | 21
 gprof              |       [] []     []                         | 22
 grep               |    [] [] []     []        []          []   | 38
 grip               |          []     []        []    []    []   | 25
-grub               |       [] []     []        []               | 30
+grub               |       [] []     []        []               | 31
 gsasl              |          []     []        []               | 21
 gss                |                 []        []               | 20
 gst-plugins-bad    |       [] []     []        []          []   | 30
@@ -865,13 +865,13 @@ gst-plugins-good   |       [] []     []        []          []   | 34
 gst-plugins-ugly   |       [] []     []        []          []   | 40
 gstreamer          |       [] []     []        []          []   | 35
 gtick              |          []     []        []               | 23
-gtkam              |          []     []        []               | 26
+gtkam              |          []     []        []               | 27
 gtkspell           |    [] [] []     [] []     []    []    []   | 51
 gutenprint         |       [] []               []               | 19
-hello              |    []    []               []               | 22
+hello              |    []    []               []               | 23
 help2man           |          []     []        []               | 21
 help2man-texi      |          []                                |  9
-i18nparse          |          []                                |  9
+i18nparse          |          []                                | 10
 idutils            |          []     []        []               | 21
 kbd                |          []                                | 15
 klavaro            |       [] []  [] []    []  []               | 36
@@ -891,7 +891,7 @@ m4                 |          []               []               | 14
 mailfromd          |          []     []                         |  9
 mailutils          |          []     []                         | 10
 make               |          []     []        []          []   | 25
-man-db             |       [] []     []        []          []   | 24
+man-db             |       [] []     []        []          []   | 25
 man-db-manpages    |       [] []               []               | 15
 meritous           |                                            |  6
 midi-instruments   |    [] [] []     []        []          []   | 44
@@ -900,7 +900,7 @@ mpop               |          []                                | 10
 msmtp              |          []                                | 10
 nano               |       [] []     []        []          []   | 34
 opcodes            |          []                                |  7
-parted             |       [] []     []        []          []   | 26
+parted             |       [] []     []        []          []   | 27
 pies               |          []     []                         |  9
 procps-ng          |          []     []        []               | 11
 procps-ng-man      |          []               []               |  4
@@ -920,21 +920,21 @@ shepherd           |          []                                |  6
 shishi             |                 []        []               |  9
 skribilo           |          []                                | 11
 solfege            |       []        []        []               | 23
-solfege-manual     |       []                                   | 11
+solfege-manual     |       []                                   | 12
 sudo               |       [] []     []        []          []   | 32
 sudoers            |          []               []          []   | 22
 sysstat            |       [] []     []        []               | 24
 tar                |       [] []     []        []          []   | 33
 texinfo            |       [] []     []                         | 22
-texinfo_document   |          []                                | 12
+texinfo_document   |          []                                | 13
 tigervnc           |       [] []               []          []   | 20
 tin                |       []                  []          []   |  8
 tin-man            |                                            |  2
 trader             |                                            | 14
-util-linux         |       [] []     []        []               | 19
-util-linux-man     |          []                                |  5
+util-linux         |       [] []               []               | 18
+util-linux-man     |          []                                |  6
 vmm                |          []                                |  3
-vorbis-tools       |                 []                         | 16
+vorbis-tools       |                 []                         | 17
 wastesedge         |       []                                   |  7
 wcd                |          []     []        []               | 15
 wcd-man            |          []                                |  8
@@ -946,10 +946,10 @@ wyslij-po          |          []     []        []               | 20
 xboard             |       [] []               []               | 13
 xdg-user-dirs      |    [] [] []     [] []     []    []    []   | 72
 xkeyboard-config   |       [] []               []               | 33
-xz                 |       [] []     []        []          []   | 20
+xz                 |       [] []     []        []          []   | 22
 xz-man             |          []                                |  8
                    +--------------------------------------------+
   85 teams           tg th tr uk  ur vi wa wo zh_CN zh_HK zh_TW
- 151 domains          0 11 53 125  1 88  5  1  90     5    42    2822
+ 151 domains          0 11 52 125  1 87  5  1  90     5    42    2840
 @end group
 @end example
