--- a/HACKING
+++ b/HACKING
@@ -450,8 +450,8 @@ list.  You can subscribe to the mailing list, or see the list
 archives, by following links from
 https://savannah.gnu.org/mail/?group=gettext .
 
-To email a patch you can use a shell command like 'git format-patch
--1' to create a file, and then attach the file to your email.  
+To email a patch you can use a shell command like 'git format-patch -1'
+to create a file, and then attach the file to your email.
 
 GNU gettext development no longer stores descriptions of new changes
 in ChangeLog files.  Instead, a single ChangeLog file is generated
