--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.26 - July 2025
+
+# Programming languages support:
+  * JavaScript:
+    - xgettext now parses regular expressions with character classes
+      correctly.
+
 Version 0.25 - May 2025
 
 # Programming languages support:
